[workspace]
exclude = ["tools/protobuf-compiler", "tools/solidity-compiler"]

members = [
  "crates/astria-account-monitor",
  "crates/astria-auctioneer",
  "crates/astria-bridge-contracts",
  "crates/astria-bridge-withdrawer",
  "crates/astria-build-info",
  "crates/astria-cli",
  "crates/astria-composer",
  "crates/astria-conductor",
  "crates/astria-config",
  "crates/astria-core",
  "crates/astria-core-address",
  "crates/astria-core-consts",
  "crates/astria-core-crypto",
  "crates/astria-eyre",
  "crates/astria-grpc-mock",
  "crates/astria-grpc-mock-test",
  "crates/astria-grpc-mock-test-codegen",
  "crates/astria-merkle",
  "crates/astria-sequencer",
  "crates/astria-sequencer-client",
  "crates/astria-sequencer-relayer",
  "crates/astria-sequencer-utils",
  "crates/astria-telemetry",
  "crates/astria-test-utils",
  "lint/*",
]
# Specify default members so that cargo invocations in github actions will
# not act on lints
default-members = [
  "crates/astria-account-monitor",
  "crates/astria-auctioneer",
  "crates/astria-bridge-contracts",
  "crates/astria-bridge-withdrawer",
  "crates/astria-build-info",
  "crates/astria-cli",
  "crates/astria-composer",
  "crates/astria-conductor",
  "crates/astria-config",
  "crates/astria-core",
  "crates/astria-core-address",
  "crates/astria-core-consts",
  "crates/astria-core-crypto",
  "crates/astria-grpc-mock",
  "crates/astria-grpc-mock-test",
  "crates/astria-grpc-mock-test-codegen",
  "crates/astria-merkle",
  "crates/astria-sequencer",
  "crates/astria-sequencer-client",
  "crates/astria-sequencer-relayer",
  "crates/astria-sequencer-utils",
  "crates/astria-telemetry",
  "crates/astria-test-utils",
]
resolver = "2"

[workspace.metadata.dylint]
libraries = [{ path = "lint/tracing_debug_field" }]

[workspace.dependencies]
async-trait = "0.1.52"
axum = "0.7.9"
base64 = "0.21"
base64-serde = "0.7.0"
borsh = "1.5.3"
bytes = "1"
celestia-types = "0.11.0"
clap = "4.5.4"
const_format = "0.2.32"
divan = "0.1.14"
ethers = { version = "2.0.11", default-features = false }
futures = "0.3"
hex = "0.4"
hex-literal = "0.4.1"
http = "1.2.0"
hyper = "1.6.0"
ibc-types = "0.15.0"
indexmap = "2.1.0"
insta = "1.36.1"
itertools = "0.12.1"
itoa = "1.0.10"
jiff = "0.2.4"
jsonrpsee = "0.24.8"
pbjson-types = "0.7.0"

# Note that when updating the penumbra versions, vendored types in `proto/sequencerapis/astria_vendored` may need to be updated as well.
penumbra-ibc = { package = "penumbra-sdk-ibc", version = "1.4.0", default-features = false }
penumbra-proto = { package = "penumbra-sdk-proto", version = "1.4.0" }

pin-project-lite = "0.2.13"
prost = "0.13.4"
rand = "0.8.5"
regex = "1.9"
# disable default features and explicitly enable rustls-tls to ensure openssl is disabled
# in the entire workspace
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
tempfile = "3.6.0"
tendermint = "0.40.3"
tendermint-config = "0.40.3"
tendermint-proto = "0.40.3"
tendermint-rpc = "0.40.3"
thiserror = "1"
tokio = { version = "1.44.2", default-features = false }
tokio-stream = { version = "0.1.17" }
tokio-test = "0.4.4"
tokio-util = "0.7.14"
tonic = "0.12.3"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false }
tracing = "0.1"
tryhard = "0.5.1"
which = "4.4.0"
wiremock = "0.5"
