[package]
name = "astria-account-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
astria-core = { path = "../astria-core", features = [
  "serde",
  "server",
  "client",
] }
astria-eyre = { path = "../astria-eyre" }
config = { package = "astria-config", path = "../astria-config" }
sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
  "default",
] }
telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
  "display",
] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tonic = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
config = { package = "astria-config", path = "../astria-config", features = [
  "tests",
] }

[build-dependencies]
astria-build-info = { path = "../astria-build-info", features = ["build"] }
