[package]
name = "astria-bridge-contracts"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astria-core = { path = "../astria-core", features = ["serde"] }

ethers = { workspace = true }
futures = { workspace = true }
ibc-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
