[package]
name = "astria-build-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
workspace = true
features = ["derive"]
optional = true

[dependencies.vergen]
version = "8"
features = ["build", "cargo", "rustc", "git", "git2"]
optional = true

[features]
build = ["dep:vergen"]
runtime = ["dep:serde"]
