[package]
name = "astria-celestia-client"
description = "an extension of eigerco's celestia client with astria specific pieces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
base64-serde = "0.7.0"
ed25519-consensus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tendermint = { workspace = true }
thiserror = { workspace = true }

sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }

### Celestia specific imports
#
# The crates imported here are all specific to eigerco's celestia APIs
# (including jsonrpsee).
# As none of them are reexported it is important to keep these in sync
# when updating.
jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }

[dependencies.celestia-rpc]
git = "https://github.com/eigerco/celestia-node-rs"
rev = "1fa61eb"

[dependencies.celestia-types]
git = "https://github.com/eigerco/celestia-node-rs"
rev = "1fa61eb"

[dependencies.celestia-tendermint]
package = "tendermint"
git = "https://github.com/eigerco/celestia-tendermint-rs"
rev = "1f8b574"
