[package]
name = "astria-celestia-client"
description = "an extension of eigerco's celestia client with astria specific pieces"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
base64-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }

merkle = { package = "astria-merkle", path = "../astria-merkle" }
sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }

### Celestia specific imports
#
# The crates imported here are all specific to eigerco's celestia APIs
# (including jsonrpsee).
# As none of them are reexported it is important to keep these in sync
# when updating.
jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }

[dependencies.celestia-rpc]
git = "https://github.com/eigerco/celestia-node-rs"
rev = "4862eec"

[dependencies.celestia-types]
git = "https://github.com/eigerco/celestia-node-rs"
rev = "4862eec"

[dependencies.celestia-tendermint]
package = "tendermint"
git = "https://github.com/eigerco/celestia-tendermint-rs"
rev = "bbe7de8"
