[package]
name = "astria-celestia-client"
description = "an extension of eigerco's celestia client with astria specific pieces"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
base64-serde = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

astria-core = { path = "../astria-core" }
merkle = { package = "astria-merkle", path = "../astria-merkle" }
telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
  "display",
] }

### Celestia specific imports
#
# The crates imported here are all specific to eigerco's celestia APIs
# (including jsonrpsee).
# As none of them are reexported it is important to keep these in sync
# when updating.
jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
prost = { workspace = true }
celestia-tendermint = { workspace = true }

[dependencies.celestia-rpc]
git = "https://github.com/eigerco/celestia-node-rs"
rev = "4862eec"

[dependencies.celestia-types]
git = "https://github.com/eigerco/celestia-node-rs"
rev = "4862eec"
