[package]
name = "astria-celestia-jsonrpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
base64-serde = "0.7.0"
http = "0.2.9"

jsonrpsee = { workspace = true, features = ["macros", "client"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }

[features]
server = ["jsonrpsee/server"]

[dev-dependencies]
astria-test-utils = { path = "../astria-test-utils" }
serial_test = "2.0.0"
tokio = { workspace = true, features = ["rt", "macros"] }
