[package]
name = "astria-cli"
version = "0.3.1"
edition = "2021"
rust-version = "1.74.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[[bin]]
name = "astria-cli"

[dependencies]
color-eyre = "0.6"

astria-core = { path = "../astria-core" }

clap = { workspace = true, features = ["derive", "env"] }
ed25519-consensus = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9.25"
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
which = { workspace = true }

[dependencies.astria-sequencer-client]
package = "astria-sequencer-client"
path = "../astria-sequencer-client"
features = ["http"]

[dev-dependencies]
assert_cmd = "2.0.12"
test-utils = { path = "./test-utils" }
