[package]
name = "astria-cli"
version = "0.5.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[[bin]]
name = "astria-cli"

[dependencies]
color-eyre = "0.6"
# v2.0.0-rc.0 - can be updated once https://github.com/ZcashFoundation/frost/issues/755 is closed
frost-ed25519 = { version = "2.0.0-rc.0", features = [] }
serde_yaml = "0.9.25"
termion = "4.0.3"
tracing-subscriber = "0.3.18"

astria-bridge-contracts = { path = "../astria-bridge-contracts" }
astria-core = { path = "../astria-core", features = ["serde"] }

clap = { workspace = true, features = ["derive", "env"] }
ethers = { workspace = true, features = ["ws"] }
hex = { workspace = true }
ibc-types = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tendermint = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "signal"] }
tracing = { workspace = true }
which = { workspace = true }
humantime.workspace = true
tryhard.workspace = true
serde_json.workspace = true
futures.workspace = true

[dependencies.astria-sequencer-client]
package = "astria-sequencer-client"
path = "../astria-sequencer-client"
features = ["http"]
