[package]
name = "astria-composer"
version = "0.4.0"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[[bin]]
name = "astria-composer"

[dependencies]
astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
astria-core = { path = "../astria-core" }
astria-eyre = { path = "../astria-eyre" }
config = { package = "astria-config", path = "../astria-config" }
telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }

pin-project-lite = "0.2.13"
secrecy = { version = "0.8", features = ["serde"] }

async-trait = { workspace = true }
axum = { workspace = true }
ed25519-consensus = { workspace = true }
ethers = { workspace = true, features = ["ws"] }
futures = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["attributes"] }
tryhard = { workspace = true }

[dependencies.sequencer-client]
package = "astria-sequencer-client"
path = "../astria-sequencer-client"
features = ["http"]

[dev-dependencies]
config = { package = "astria-config", path = "../astria-config", features = [
  "tests",
] }
test_utils = { package = "astria-test-utils", path = "../astria-test-utils", features = [
  "geth",
] }
tokio-test = { workspace = true }

tendermint-rpc = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
astria-build-info = { path = "../astria-build-info", features = ["build"] }
